[package]
name = "acmec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "*", features = ["blocking"] }
openssl = "0.10.38"
serde_json = "1.0.79"

[features]
